--- a/doyoulikemepo.html
+++ b/doyoulikemepo.html
@@ -13,6 +13,6 @@
             <div class="btn-group"> <button class="yes-btn">Yes</button> <button class="no-btn">No</button> 
             </div>
         </div>
-        <script src="doyoulikemepo.java"></script>
+        <script src="doyoulikemepo.js"></script>
     </body>
 </html>
